<resources>
    <string name="app_name">Challenge</string>
    <string name="title_screen_register">Cadastro</string>
    <string name="title_screen_login">Login</string>
    <string name="title_screen_home">Home</string>
    <string name="title_screen_news">Novidades</string>
    <string name="title_data_programmer">Dados do Programador</string>
    <string name="text_input_edit_text_name">Nome</string>
    <string name="text_input_edit_text_email">Email</string>
    <string name="text_input_edit_text_password">Senha</string>
    <string name="button_text_register">Cadastrar</string>
    <string name="button_text_login">Entrar</string>
    <string name="error_firebase_email">com.google.firebase.auth.FirebaseAuthInvalidCredentialsException: The email address is badly formatted.</string>
    <string name="error_firebase_password">com.google.firebase.auth.FirebaseAuthInvalidCredentialsException: The password is invalid or the user does not have a password.</string>
    <string name="error_firebase_user">com.google.firebase.auth.FirebaseAuthInvalidUserException: There is no user record corresponding to this identifier. The user may have been deleted.</string>
    <string name="error_email">E-mail inválido</string>
    <string name="error_password">Senha inválida</string>
    <string name="error_fields">Digite email e senha</string>
    <string name="error_title">Ops… Ocorreu um erro!</string>
    <string name="error_text">Conta inválida, faça o cadastro.</string>
    <string name="error_service">Desculpe mas ocorreu um erro, tente novamente mais tarde!</string>
    <string name="affimative_text_button">OK</string>
    <string name="test">Lorem ipsum ut tempor ac sit malesuada neque tristique vitae proin, lobortis enim iaculis tempus ipsum condimentum ju </string>
    <string name="menu_news">Novidades</string>
    <string name="menu_programmer_data">Dados do Desenvolvedor</string>
    <string name="menu_button_post">Postar</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="floating_button_description">O que está pensando?</string>
    <string name="title_data_name">Nome:</string>
    <string name="data_name">Matheus Kittler</string>
    <string name="title_data_age">Idade:</string>
    <string name="data_age">25 anos</string>
    <string name="title_data_local">Local:</string>
    <string name="data_local">Gravataí/RS</string>
    <string name="title_description">Descrição:</string>
    <string name="description">Sup!\nAtuo como desenvolvedor android há 2 anos no mercado de trabalho, onde trabalhei em duas empresas de consultoria, RCA Digital (Poa/RS) e minha atual, SoftDesign (Poa/RS). Estudo TI desde 2016 quando iniciei meu curso técnico na Escolas e Faculdades QI e desde 2019 estou cursando Analise de Sistemas,me matriculo em poucas cadeiras para conciliar trabalho e estudos.</string>
    <string name="title_socials">Redes Sociais:</string>
    <string name="linkedin">https://www.linkedin.com/in/matheus-kittler-47a449148/</string>
    <string name="github">https://github.com/matheus-kittler</string>
</resources>